================

Version: 0.6.0-9000 [2018-01-20]

NEW FEATURES:

 o Now it is possible to set the dimension on an empty list environment without
   first resizing it with length(), e.g. x <- listenv(); dim(x) <- c(2, 3).

 o Now it is possible to remove multiple elements by assigning NULL, e.g.
   x[c(2:3, 10)] <- NULL.

 o Added lengths() for list environments.  Requires R (>= 3.3.0).

 o Added is.matrix(), is.array(), as.vector() and as.matrix() for list
   environments.

BUG FIXES:

 o print() on a named, empty list environment would output an empty string.
 
 o Removing an element from a list environment did not remove dimensions,
   e.g. x$a <- NULL.

DEPRECATED AND DEFUNCT:

 o Function map() has been renamed to mapping() and same for the corresponding
   replacement function.  The map() and map<-() functions will soon be
   deprecated and eventually defunct.

 o x <- listenv(length = n) is defunct; use x <- listenv(); length(x) <- n.

 
Version: 0.6.0 [2015-12-27]

NEW FEATURES:

 o Added support for multi-dimensional subsetting of list environments
   just as for list.

BUG FIXES:

 o parse_env_subset(x[[idx]]) for list environment 'x' and index 'idx' claimed
   x[[idx]] exists as long as idx in [1,length(x)] but it forgot to check if
   element really existed, which may not be true if 'x' has been expanded.
 
 
Version: 0.5.0 [2015-10-30]

NEW FEATURES:

 o Add support for assigning elements when creating list environment
   similarly how to lists work, e.g. x <- listenv(a = 1, b = 2).

 o length(x) <- n now expand/truncate a list environment.

 o Added unlist() and all.equal() for list environments.

DEPRECATED AND DEFUNCT:

 o Deprecated x <- listenv(length = n); use x <- listenv(); length(x) <- n.

BUG FIXES:

 o as.listenv(x) would drop NULL elements in 'x'.

 o x[idxs], x[name] <- y and x$<name> <- y would introduce NA names for
   non-named list environments.
 
 
Version: 0.4.0 [2015-08-08]

NEW FEATURES:

 o Added as.listenv().
