@@ -30,6 +30,7 @@ S3method(print,listenv)
 S3method(undim,default)
 S3method(undim,listenv)
 S3method(unlist,listenv)
+export("dim_na<-")
 export(as.listenv)
 export(get_variable)
 export(lengths.listenv)
