@@ -13,6 +13,11 @@ NEW FEATURES:
 
  o Added lengths() for list environments.  Requires R (>= 3.3.0).
 
+ o dim_na(x) <- dims, where 'dims' contain exactly one missing value, will
+   set the "missing" dimension based on the length of 'x' and the other
+   dimensions specified, e.g. with length(x) == 6, dim_na(x) <- c(2, NA) will
+   set dim(x) <- c(2, 3).
+
  o Added is.matrix(), is.array(), as.vector() and as.matrix() for list
    environments.
 
